Bug 519049 Wrong value broadcast when setting attribute twice while script blocker active r=smaug sr=bz